--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.3.0",
+    "@material-ui/core": "^4.11.2",
     "next": "10.0.5",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
