--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@chec/commerce.js": "^2.3.0",
     "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "next": "10.0.5",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
